# BLT

./: .gitignore  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md
.github/workflows/: ci.yml  hide-superseded-releases.yml  release.yml
admin-web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
admin-web/src/: App.tsx  api.ts  styles.css
admin-web/src/pages/: Dashboard.tsx  Jukebox.tsx  Log.tsx  Login.tsx  Settings.tsx  Shares.tsx  Titles.tsx
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: chunk_server.rs  commands.rs  db.rs  discovery.rs  downloads.rs  freespace.rs  lib.rs  main.rs  media_proxy.rs  mpv.rs  scripts.rs  server_api.rs  state.rs  ws.rs
apps/desktop/src/client/: ClientShell.tsx  Downloads.tsx  Jukebox.tsx  Library.tsx  Log.tsx  People.tsx  Settings.tsx  Shares.tsx  Transfers.tsx
apps/desktop/src/lib/: api.ts
apps/desktop/src/playback/: Playback.tsx
crates/core/: Cargo.toml
crates/core/src/: bitmap.rs  chunking.rs  discovery.rs  hashing.rs  jukebox.rs  lib.rs  manifest.rs  p2p.rs  pathsafe.rs  protocol.rs  ratemeter.rs  transfer.rs
crates/core/src/runtime/: data_root.rs  logging.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: admin_api.rs  bindings.rs  config.rs  data_api.rs  db.rs  error.rs  jukebox.rs  lib.rs  library.rs  main.rs  mdns.rs  share.rs  state.rs  tasks.rs  update.rs  util.rs  ws.rs
crates/server/tests/: integration.rs
docs/: 01_PRODUCT_PLAN.md  02_FEATURE_SPEC.md  03_TECHNICAL_DESIGN.md  README.md  TESTING_CHECKLIST.md  V0.1.1_FIXLIST.md
examples/: README.md
examples/sample-title/.blt/: info.json
