[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Buttz LAN Tool"]

# Shared dependency versions so core/server/desktop pick up the same crates.
[workspace.dependencies]
blt-core = { path = "crates/core" }

blake3 = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["fs", "cors", "trace"] }
rusqlite = { version = "0.40", features = ["bundled", "backup"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
mdns-sd = "0.20"
if-addrs = "0.13"
local-ip-address = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
futures = "0.3"
futures-util = "0.3"
bytes = "1"
hex = "0.4"
# `std` pulls password-hash/std → rand_core/getrandom, which is what exposes
# `OsRng` for salt generation (previously enabled implicitly via the `rand` dep).
argon2 = { version = "0.5", features = ["std"] }
toml = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
percent-encoding = "2"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Dev builds keep file/line info for usable backtraces but drop the heavy
# per-variable/type DWARF that bloated target/debug to ~20 GB of debug info
# across the (large) Tauri dependency tree. Backtraces still resolve; stepping
# through dependency internals is rarely needed. Release builds are unaffected.
[profile.dev]
debug = "line-tables-only"
