[package]
name = "blt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Buttz LAN Tool — shared core: manifest, chunking, hashing, protocol, transfer, p2p, discovery."

[features]
# `runtime` (data-root resolution + rotating-file logging) is on by default so
# a plain `cargo test` exercises the whole crate; both binaries use it anyway.
# Pure-logic consumers can opt out with default-features = false.
default = ["runtime"]
runtime = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender"]

[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
